examples/test/testpolicy19631.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19631
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key16: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value46
      podSelector:
        matchLabels:
          key43: value27
          key28: value31
          key37: value42
